--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -24,7 +24,7 @@
 \newcommand{\per}{\approx}
 \newcommand{\rz}{\Vdash}
 \newcommand{\Type}{\mathsf{Type}}
-\newcommand{\terminating}[1]{[\![#1]\!]}
+\newcommand{\values}[1]{[\![#1]\!]}
 \newcommand{\typeOf}[1]{|#1|}
 \newcommand{\setOf}[1]{\langle #1 \rangle}
 \newcommand{\support}[1]{\|#1\|}
@@ -82,7 +82,10 @@
 \end{abstract}
 
 \input{introduction.tex}
-\input{theory.tex}
+\input{modest_sets.tex}
+\input{specifications.tex}
+\input{logic.tex}
+\input{translation.tex}
 \input{examples.tex}
 \input{implementation.tex}
 \input{comparison.tex}
