--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -76,7 +76,7 @@ between computational (Set) and non-computational (Prop) is
 automatically determined, and a corresponding implementation can be
 provided through logical techniques.
 
-[ab: from here on the introduction seems ``undone'']
+\internal{AB}{from here on the introduction seems ``undone''}
 
 The RZ system translates this to the language understood by many
 programmers (typed interfaces with assertions in classical logic)
