--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -3,6 +3,18 @@
 
 Explain the input language and its semantics.
 
+\internal{AB}{The plan here seems to be as follows. Before this
+  section we will say that assertions are written in the negative
+  fragment, and that in the input language we use constructive logic,
+  which turns out to be more convenient. So just go ahead and
+  introduce constructive logic without worrying what its
+  interpretation might be. Then in the translation secton we'll
+  explain the realizability interpretation of constructive logic.
+  Actually, the logic is first-order intuitionistic logic. The fact
+  the the logic is intuitionistic is not a choice but reality: the
+  interpretation does not validate the Law of Excluded Middle. This
+  should be commented on.}
+
 
 %%% Local Variables: 
 %%% mode: latex
