--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -76,6 +76,29 @@ between computational (Set) and non-computational (Prop) is
 automatically determined, and a corresponding implementation can be
 provided through logical techniques.
 
+\internal{AB}{I wrote the following paragraph to make a connection
+  with the ``old'' schools of computability. It is rather terse now.
+  If you fit it in the introduction somewhere, it can stay such. If
+  you move it to the conclusion, I can expand it, if needed.}
+
+We briefly explain the relationships between our setup and other
+common approaches. Most formulations of computable mathematics are
+based on realizability models~\cite{Bauer:00}, even though they are
+usually not presented as such: Recursive
+Mathematics~\cite{recursive-math} is based on the original
+realizability by Turing machines~\cite{KleeneSC:intint}; Type Two
+Effectivity~\cite{Wei00} on function
+realizability~\cite{KleeneSC:fouim} and relative function
+realizability~\cite{BirkedalL:devttc}, while topological and domain
+representations~\cite{Bla97a,Bauer:Birkedal:Scott:98} are based on
+realizability over the graph model
+$\mathcal{P}\omega$~\cite{ScottD:dattl}. A common feature of these is
+that they use models of computation which are suitable for the
+theoretical studies of computability, rather than for practical
+programming. Since we want to emphasize the practical aspects of
+realizability, we have chosen instead an actual real-world programming
+language.
+
 \internal{AB}{from here on the introduction seems ``undone''}
 
 The RZ system translates this to the language understood by many
