--- a/doc/cie/modest_sets.tex
+++ b/doc/cie/modest_sets.tex
@@ -213,17 +213,13 @@ Section~\ref{sec:realizability-interpretation} we review other
 canonical constructions on modest sets, such as products and sums.
 
 
-\subsection{Relationship with other models of computation}
-\label{sec:relat-with-other}
-
-\internal{AB}{This might fit better at the end of the paper, but for the CCA
-audience it's good that they see it early, because it will help them
-imagine things more easily.}
-
-
-
-\subsection{Examples of modest sets}
+\subsection{Two Examples}
 \label{sec:examples-modest-sets}
+
+Group. (mention word problem and why pers are not computable).
+
+Natural numbers. Explicitly postulate the realizer for induction.
+Shows that functors are desired.
 
 
 \subsection{Uniform families}
