--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -221,3 +221,49 @@ KEY="Peyton Jones"}
     year = "1999",
     url = "citeseer.ist.psu.edu/longley99when.html"
 }
+
+@book{KleeneSC:fouim,
+  author="Kleene, S.C. and Vesley, R.E.",
+  title="The Foundations of Intuitionistic Mathematics, 
+			especially in relation to recursive functions",
+  year=1965,
+  publisher={North-Holland Publishing Company},
+  reviews="JSL 31.258; MR 31#1190; ZBL 133.246",
+}
+
+@PhdThesis{BirkedalL:devttc,
+  author = 	 {L. Birkedal},
+  title = 	 {Developing Theories of Types and Computability},
+  school = 	 {School of Computer Science, Carnegie Mellon University},
+  year = 	 1999,
+  month =	 dec
+}
+		  
+@Article{Bauer:Birkedal:Scott:98,
+  author =	 "A. Bauer and L. Birkedal and D.S. Scott",
+  title = 	 "Equilogical Spaces",
+  journal =	 "Theoretical Computer Science",
+  year =	 2004,
+  pages =        "35--59",
+  number =       315,
+  volume =       1
+}  
+
+@PhdThesis{Bla97a,
+  author = {Blanck, Jens},
+  title = {Computability on topological spaces by effective domain
+  representations},
+  year = {1997},
+  school = {Uppsala University, Department of Mathematics},
+  address = {Uppsala, Sweden}
+}
+
+@article{ScottD:dattl,
+   author =  {D.S. Scott},
+   title =   {Data Types as Lattices},
+   journal = {SIAM Journal of Computing},
+   year =    1976,
+   volume =  5,
+   number =  3,
+   pages =   {522-587}
+}
