--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -79,15 +79,16 @@ provided through logical techniques.
 \internal{AB}{I wrote the following paragraph to make a connection
   with the ``old'' schools of computability. It is rather terse now.
   If you fit it in the introduction somewhere, it can stay such. If
-  you move it to the conclusion, I can expand it, if needed.}
+  you move it to the conclusion, I can expand it on demand.}
 
 We briefly explain the relationships between our setup and other
-common approaches. Most formulations of computable mathematics are
-based on realizability models~\cite{Bauer:00}, even though they are
-usually not presented as such: Recursive
-Mathematics~\cite{recursive-math} is based on the original
-realizability by Turing machines~\cite{KleeneSC:intint}; Type Two
-Effectivity~\cite{Wei00} on function
+common approaches to computable mathematics. Most formulations of
+computable mathematics are based on realizability
+models~\cite{Bauer:00}, even though they were not initially developed,
+nor are they usually presented within the framework of realizability:
+Recursive Mathematics~\cite{ershov98:_handb_recur_mathem} is based on
+the original realizability by Turing machines~\cite{KleeneSC:intint};
+Type Two Effectivity~\cite{Wei00} on function
 realizability~\cite{KleeneSC:fouim} and relative function
 realizability~\cite{BirkedalL:devttc}, while topological and domain
 representations~\cite{Bla97a,Bauer:Birkedal:Scott:98} are based on
