--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -267,3 +267,15 @@ KEY="Peyton Jones"}
    number =  3,
    pages =   {522-587}
 }
+
+
+@Book{ershov98:_handb_recur_mathem,
+  editor =	 {Ershov, Yu. L. and Goncharov, S.S. and Nerode, A. and Remmel, J.B.},
+  title = 	 {Handbook of Recursive Mathematics},
+  publisher = 	 {Elsevier},
+  year = 	 1998,
+  volume =	 139,
+  series =	 {Studies in Logic and The Foundations of Mathematics},
+  address =	 {Amsterdam},
+  note =	 {Volume 2, Recursive Algebra, Analysis and Combinatorics}
+}
