--- a/doc/cie/modest_sets.tex
+++ b/doc/cie/modest_sets.tex
@@ -218,12 +218,17 @@ canonical constructions on modest sets, such as products and sums.
 
 Group. (mention word problem and why pers are not computable).
 
-Natural numbers. Explicitly postulate the realizer for induction.
-Shows that functors are desired.
+Natural numbers. Explicitly postulate the realizer for induction,
+using the type $\alpha \to (\alpha \to \alpha) \to \mathtt{nat} \to
+\mathtt{\alpha}$ of a realizer for induction.
 
 
 \subsection{Uniform families}
 \label{sec:uniform-families}
+
+Describe uniform families and mention that they are related to
+dependent types. Motivate and discuss the uniformity. Describe the
+dependent sums and products.
 
 
 %%% Local Variables: 
