--- a/doc/cie/specifications.tex
+++ b/doc/cie/specifications.tex
@@ -4,10 +4,12 @@
 Outline:
 %
 \begin{enumerate}
-\item We introduce assertions by saying that signatures only describe a
-  part of a specification
+\item We introduce signatures as assertions as a way of specifying
+  abstract data types.
 \item Our assertions talk about per's
 \item They are written in the negative fragment,
+\item give examples of specifications
+\item Do we discuss functor signatures as well?
 \end{enumerate}
 
 
