--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -45,6 +45,10 @@
 \newcommand{\set}[1]{\{#1\}}
 \newcommand{\such}{\mid}
 
+% Common sets
+\newcommand{\NN}{\mathbb{N}}
+\newcommand{\ZZ}{\mathbb{Z}}
+
 % Theorem-like environments
 \iffalse
 {
