--- a/doc/cie/cie.tex
+++ b/doc/cie/cie.tex
@@ -30,6 +30,8 @@
 \newcommand{\cfun}[2]{\mathtt{fun}\;#1 \to #2}
 \newcommand{\clet}[2]{\mathtt{let}\;#1 = #2}
 \newcommand{\cletrec}[2]{\mathtt{let}\;\mathtt{rec}\;#1 = #2}
+\newcommand{\cfst}[1]{\mathtt{fst}\;#1}
+\newcommand{\csnd}[1]{\mathtt{snd}\;#1}
 
 % Realizaiblity
 \newcommand{\per}{\approx}
