--- a/doc/cie/modest_sets.tex
+++ b/doc/cie/modest_sets.tex
@@ -191,8 +191,22 @@ represent the same morphism if, for all $u, u' \in \support{A}$,
   u \per_A u' \implies v\;u \per_B v'\;u' \;.
 \end{equation*}
 
-The category of modest sets has a very rich structure. For example,
-the morphisms between modest sets~$A$ and~$B$ again form a modest set
+The category of modest sets has a very rich structure. For example, we
+may form a cartesian product $A \times B$ of modest sets $A$ and $B$
+by
+%
+\begin{align*}
+  \setOf{A \times B} &= \setOf{A} \times \setOf{B},\\
+  \typeOf{A \times B} &= \typeOf{A} * \typeOf{B},\\
+  p \rz_{A \times B} (x,y) &\iff
+  \cfst{p} \rz_A x \land csnd{p} \rz_B y.
+\end{align*}
+%
+The projections $\pi_1 : A \times B \to A$ and $\pi_2 : A \times B \to
+B$ are realized by $\cfun{p}{\cfst{p}}$ and $\cfun{p}{\csnd{p}}$,
+respectively.
+
+The morphisms between modest sets~$A$ and~$B$ again form a modest set
 $B^A$, also written as $A \to B$, called the \emph{exponential} of~$A$
 and~$B$, with the underlying set
 %
@@ -208,41 +222,64 @@ the underlying type
 \end{equation*}
 %
 and the realizability relation $\rz_{B^A}$ defined
-by~\eqref{eq:rz-function-space}. In
-Section~\ref{sec:realizability-interpretation} we review other
-canonical constructions on modest sets, such as products and sums.
-
+by~\eqref{eq:rz-function-space}. The evaluation map $e : B^A \times A
+\to B$, $e(f,x) = f(x)$ is realized by $\cfun{(u,v)}{u\;v}$. If a
+function $f : C \times A \to B$ is realized by $v$, then its transpose
+$\tilde{f} : C \to B^A$, $\tilde{f}(z)(x) = f(z,x)$, is realized by
+$\cfun{z\;x}{v \; (z,x)}$. This shows that the category of modest sets
+is cartesian closed. In Section~\ref{sec:realizability-interpretation}
+we review other canonical constructions on modest sets, such as
+products and sums.
 
 \subsection{Two Examples}
 \label{sec:examples-modest-sets}
 
-As a first example we implement the group $(\ZZ_7, 0, {-}, {+})$ of
-integers modulo~$7$. We represent the elements of $\ZZ_7 = \set{0, 1,
-  \ldots, 6}$ by values of type $\cint$,
+As a first example we implement the cyclic group on seven elements
+$(\ZZ_7, 0, {-}, {+})$. For the implementation we must give a
+representation of $\ZZ_7$ as a modest set~$Z = (\ZZ_7, \typeOf{Z},
+{\rz_Z})$, and show that negation $-$ and addition $+$ are realized.
+We represent the elements of~$\ZZ_7 = \set{0, 1, \ldots, 6}$ with
+values of type $\typeOf{Z} = \cint$ and the realizability relation
 %
 \begin{equation*}
-  \typeOf{\ZZ_7} = \cint.
+  v \rz_Z k \iff v = k \;.
 \end{equation*}
 %
-An integer value $v \in \values{\cint}$ reprents an element $k \in
-\ZZ_7$ if $v \geq 0$ and $v \equiv k \mod 7$.\footnote{The reason for
-  requiring $v \geq 0$ is that the Ocaml operator $\mathtt{mod}$
-  returns negative remainders when given a negative argument, which is
-  something we do not want to worry about.} The associated per is
+This says that $v \in \values{\cint}$ represents an element $k \in
+\ZZ_7$ if it is equal to it. The associated per is
 %
 \begin{equation*}
-  u \per_{\ZZ_7} v
+  u \per_Z v
   \iff
-  u \geq 0 \land v \geq 0 \land u \equiv v \mod 7 \;.
+  0 \leq u = v \leq 6 \;.
 \end{equation*}
 %
-(Mention the word problem and decidable equality at the end.)
+Negation is realized by the function $\mathtt{neg}: \cint \to \cint$,
+%
+\begin{equation*}
+  \clet{\mathtt{neg}\; k}{7 - k},
+\end{equation*}
+%
+while addition is realized by $\mathtt{add}: \cint * \cint \to \cint$,
+%
+\begin{equation*}
+  \clet{\mathtt{add}\;(k,m)}{(k + m) \;\mathtt{mod}\; 7}\;.
+\end{equation*}
+%
+The modest set~$Z$ also has \emph{decidable equality}, which means
+that the characteristic map $\mathrm{eq} : Z \times Z \to
+\set{\mathtt{false}, \mathtt{true}}$ of equality is realized, namely
+by $\cfun{(k,m)}{(k=m)}$. However, not all modest sets have decidable
+equality, since there may not be a decision procedure for determining
+whether two realizers represent the same element. In particular, this
+would happen if we implemented a group with an undecidable word
+problem~\cite{undecidable-word-problem}.
 
 
-
-Natural numbers. Explicitly postulate the realizer for induction,
-using the type $\alpha \to (\alpha \to \alpha) \to \mathtt{nat} \to
-\mathtt{\alpha}$ of a realizer for induction.
+\internal{AB}{Example: Natural numbers. Explicitly postulate the
+  realizer for induction, using the type $\alpha \to (\alpha \to
+  \alpha) \to \mathtt{nat} \to \mathtt{\alpha}$ of a realizer for
+  induction.}
 
 
 \subsection{Uniform families}
