--- a/doc/cie/examples.tex
+++ b/doc/cie/examples.tex
@@ -2,6 +2,8 @@
 \label{sec:examples}
 
 Lots of fancy examples that make people go "Oooooh!"
+\subsection{Modulus of Continuity}
+\label{sec:we-show-modulus-of-continuity-example}
 
 %%% Local Variables: 
 %%% mode: latex
