--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -164,7 +164,8 @@ KEY="Peyton Jones"}
   booktitle = {Handbook of Logic in Computer Science, Volume 5},
   editor = {Abramsky, S. and Gabbay, D.M. and Maibaum, T.S.E.},
   publisher = {Clarendon Press},
-  address = {Oxford}
+  address = {Oxford},
+  year = {1998}
 }
 
 @InProceedings{EL00,
@@ -279,3 +280,10 @@ KEY="Peyton Jones"}
   address =	 {Amsterdam},
   note =	 {Volume 2, Recursive Algebra, Analysis and Combinatorics}
 }
+
+@book{coqart,
+	title = {Interactive Theorem Proving and Program Development},
+	author = {Yves Bertot and Pierre Cast\'eran},
+	publisher= {Springer},
+	year=2004
+	}
