--- a/doc/cie/introduction.tex
+++ b/doc/cie/introduction.tex
@@ -1,16 +1,14 @@
 \section{Introduction}
 \label{sec:introduction}
 
-Given the constants, functions, relations, and axioms of a
-mathematical structure, what must a programmer do in order to
-implement that mathematical structure?
+Given the constants, functions, relations, and axioms of a mathematical
+structure, what qualifies as a correct and complete computer implementation?
 
-For some familiar cases, the answer is obvious. Code implementing a
-group must have a type to represent the group elements, a constant, a
-unary operator, and a binary operator, each satisfying appropriate
-axioms that guarantee the constant is the neutral element, the unary
-operator computes inverses, and that the binary operator is
-associative.
+For some familiar cases, the answer is obvious. Code implementing a group must
+have a type to represent the group elements, as well as a constant, a unary
+operator, and a binary operator, each satisfying appropriate axioms (the
+constant is the neutral element, the unary operator computes inverses, and that
+the binary operator is associative).
 
 But for more interesting structures, especially those arising in
 mathematical analysis, the answer is much less obvious. How do we
@@ -23,46 +21,47 @@ real arithmetic~\cite{Mue00,Lam05a} show that the theory can be put
 into practice quite successfully.
 
 The theory of realizability provides guidance in development of
-computable mathematics. We show that, in addition to being a
+computable mathematics.   We show that, in addition to being a
 fundamental tool in logic and theory of computability, realizability
 has direct application to the design and implementation of programs.
 It can be used to find a description of the data structure directly
 corresponding to a mathematical specification.
 
-Extracting code interfaces by hand from mathematical axioms quickly
-grows tedious, especially because different but logically equivalent
-sets of axioms correspond to different, although interdefinable,
-interfaces for code. One might want to see several of these, since
-some interfaces can be more useful than others in practice.
+Unfortunately, extracting code interfaces by hand from mathematical axioms
+quickly grows tedious. Worse, different but logically equivalent sets of axioms
+correspond to different, although interdefinable, interfaces for code. One
+might want to compare several variations, since some interfaces can be more
+useful than others in practice.
 
-And few programmers --- even those with solid backgrounds in
-mathematics and logic --- are familiar with constructive logic or
+And few programmers --- even those with strong backgrounds in
+mathematics and classical logic --- are familiar with constructive logic or
 realizability. Programmers are more familiar with language constructs
-describing interfaces: C++ header files, ML signatures, Java
-interfaces, and the like.
+describing interfaces (e.g., C++ header files, ML signatures, or Java
+interfaces) and logical assertions (e.g., preconditions
+and postconditions).
 
 \bigskip
 
-We have therefore implemented a system, called RZ, which serves as a
-bridge between the logical world and the programming world. It
-automatically translates specifications in constructive logic into
-actual interface code in a programming language (currently Objective
-Caml~\cite{ocaml}, but we are considering other languages as well). The
-constructive part of the original specification turns into interface
-code listing types and values that must exist in an implementation.
+We have therefore implemented a system, called RZ, to serve as a bridge between
+the logical world and the programming world. RZ automatically translates
+specifications in constructive logic into actual interface code in a
+programming language (currently Objective Caml~\cite{ocaml}, but we are
+considering other languages as well).
 
-The remainder of the specification is maintained as assertions about
-these types and values. Because these assertions have no computational
-content, they can be interpreted constructively or classically equally
-well, and in particular make equal sense to programmers (and
-mathematicians) who are used to working in classical logic.
+The constructive part of the original specification turns into interface code
+listing types and values that must exist in an implementation. The remainder of
+the specification is maintained as assertions about these types and values.
+Because these assertions have no computational content, they can be interpreted
+constructively or classically equally well, and in particular make equal sense
+to programmers (and mathematicians) who are more comfortable thinking in
+classical logic.
 
 \bigskip
 
 RZ was specifically designed as a lightweight system. Although the
 realizability translation can be extended to transforming complete
 proofs into complete code~\cite{komagata+:tr95}, we have not
-implemented this. Other systems, including Coq~\cite{coq}, already
+implemented this. Other systems, including Coq~\cite{coqart}, already
 perform this task well.
 
 But Coq works best when the entire task (from specification to code
@@ -76,29 +75,6 @@ between computational (Set) and non-computational (Prop) is
 automatically determined, and a corresponding implementation can be
 provided through logical techniques.
 
-\internal{AB}{I wrote the following paragraph to make a connection
-  with the ``old'' schools of computability. It is rather terse now.
-  If you fit it in the introduction somewhere, it can stay such. If
-  you move it to the conclusion, I can expand it on demand.}
-
-We briefly explain the relationships between our setup and other
-common approaches to computable mathematics. Most formulations of
-computable mathematics are based on realizability
-models~\cite{Bauer:00}, even though they were not initially developed,
-nor are they usually presented within the framework of realizability:
-Recursive Mathematics~\cite{ershov98:_handb_recur_mathem} is based on
-the original realizability by Turing machines~\cite{KleeneSC:intint};
-Type Two Effectivity~\cite{Wei00} on function
-realizability~\cite{KleeneSC:fouim} and relative function
-realizability~\cite{BirkedalL:devttc}, while topological and domain
-representations~\cite{Bla97a,Bauer:Birkedal:Scott:98} are based on
-realizability over the graph model
-$\mathcal{P}\omega$~\cite{ScottD:dattl}. A common feature of these is
-that they use models of computation which are suitable for the
-theoretical studies of computability, rather than for practical
-programming. Since we want to emphasize the practical aspects of
-realizability, we have chosen instead an actual real-world programming
-language.
 
 \internal{AB}{from here on the introduction seems ``undone''}
 
